# pinn-spi-aaai2026

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: matrix_10d_10d.npz  matrix_5d_5d.npz
docs/: README.md  metrics.md  scripts.md
pinn_spi/agents/: init.py  nets.py
pinn_spi/algs/: PPO.py  __init__.py  base.py  pinn_spi.py  sac.py
pinn_spi/core/: buffers.py  evaluate.py  normalization.py  rollout.py
pinn_spi/envs/: __init__.py  base.py  cartpole.py  gym_envs.py  halfcheetah.py  lqr.py  pendulum.py
pinn_spi/experiment/: config.py  evaluation.py  runner.py
pinn_spi/utils/: logger.py  plots.py  seeding.py  serialization.py
ref/: SAC_LQR_10d.ipynb  SAC_LQR_5d.ipynb  SAC_cartpole.ipynb  SAC_pendulum.ipynb  relaxed_stochastic_Pendulum.ipynb  relaxed_stochastic_control_CartPole.ipynb
scripts/: compare.py  eval.py  plot_trajectory_norms.py  run_aaai2026.sh  test_sac_configs.sh  train.py
