[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinn-spi"
version = "0.1.0"
description = "PINN-SPI: Physics-Informed Neural Network Policy Iteration for model-based RL"
authors = [
    {name = "Minseok Kim", email = "tomatofromsky@gmail.com"},
    {name = "Yeongjong Kim", email = "kim.yj@postech.ac.kr"},
    {name = "Namkyung Cho", email = "namkyeong.cho@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["reinforcement learning", "physics informed neural networks", "control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=1.12.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]
gym = [
    "gymnasium>=0.26.0",
]

[project.scripts]
pinn-spi-train = "scripts.train:main"
pinn-spi-eval = "scripts.eval:main"
pinn-spi-compare = "scripts.compare:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pinn_spi*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
